--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -2,7 +2,7 @@
    <body>
       <form action = "http://localhost:5000/login" method = "POST">
          <p>Enter Name:</p>
-         <p><input type = "text" name = "username" /></p>
+         <p><input type = "text" name = "nm" /></p>
          <p><input type = "submit" value = "submit" /></p>
       </form>
    </body>
